--- a/Skooby.WebApp/Views/Home/Index.cshtml
+++ b/Skooby.WebApp/Views/Home/Index.cshtml
@@ -5,10 +5,8 @@
 }
 
 @section styles {
-    
-    <link rel="stylesheet" href="~/css/dashboard.css" />
 
-
+    <link rel="stylesheet" href="~/css/dashboard.css" /> 
 }
 
 <div>
@@ -19,9 +17,7 @@
         </div>
     </div>
 </div>
-<section class="skooby-section skooby-dashboard">
-   
-
+<section class="skooby-section skooby-dashboard"> 
     <h2 class="genre-title">Genres</h2>
     <div class="container-wrapper">
         <div class="content-wrapper">
@@ -44,52 +40,46 @@
                                 <div class="book-content">
                                     <a href="@Url.Action("ViewBook", "Home", new { id = book.Id })">
                                         <div class="book-image-preview">
-                                            <img class="book-image" src="@book.Image ?? " /img/book-preview.png"" alt="Book Cover" />
+                                            <img class="book-image" src="@book.Image ?? "/img/about-us.png" alt="Book Cover" />
+                                            @* <img class="book-image" src="@book.Image ?? " /img/about-us.png" alt="Book Cover" /> *@
                                         </div>
                                     </a>
                                     <div class="book-info-card" id="per-book-info-@book.Id">
                                         <h5 class="book-title book-text">@book.Name</h5>
                                         <p class="author-name book-text">by @string.Join(", ", book.AuthorNames) • @book.PublishedOn.Year</p>
                                         <p class="book-description book-text">@book.Description</p>
-                                        <!-- Additional info like rating and reviews could be added here -->
                                     </div>
                                 </div>
                             }
                         </div>
-
-                        <!-- "See More..." button -->
                         <div>
                             <button class="see-more-button">See More...</button>
                         </div>
                     </div>
                 }
             }
-
-            <!-- Pagination and other components can be added here -->
         </div>
-
         <div class="sidebar-container">
-            <!-- Sidebar content here -->
+            <div class="sidebar-content">
+                <h2 class="sidebar-title">Filter</h2>
+                <form class="d-flex filter-searchbar" role="search" method="get">
+                    <input class="form-control me-2 search-input" name="searchTerm" type="search" placeholder="Search"
+                           aria-label="Search">
+                    <button class="btn btn-outline-success search-button" type="submit">Search</button>
+                </form>
+
+                <div class="filter-category-container">
+                    @foreach (var genre in Model.SelectMany(book => book.GenreNames).Distinct())
+                    {
+                        <p class="filter-category-titles">@genre</p>
+                    }
+                </div> 
+            </div>
         </div>
     </div>
-    <div class="sidebar-content">
-        <h2 class="sidebar-title">Filter</h2>
-        <form class="d-flex filter-searchbar" role="search" method="get">
-            <input class="form-control me-2 search-input" name="searchTerm" type="search" placeholder="Search"
-                aria-label="Search">
-            <button class="btn btn-outline-success search-button" type="submit">Search</button>
-        </form>
 
-        <div class="filter-category-container">
-            @foreach (var genre in Model.SelectMany(book => book.GenreNames).Distinct())
-            {
-                <p class="filter-category-titles">@genre</p>
-            }
-        </div>
 
-        </div>
-    </div>
-   
+
 </section>
 
 
@@ -112,5 +102,5 @@
 </script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-    crossorigin="anonymous"></script>
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
